--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
     <ion-item>
       <ion-icon name="people"></ion-icon> Community
     </ion-item>
-    <ion-item>
+    <ion-item (click)="gotoSlides()">
       <ion-icon name="image"></ion-icon> Gallery
     </ion-item>
   </ion-list>
